--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,15 @@ dj-database-url==0.5.0
 Django==4.2.23
 django-allauth==0.57.2
 django-crispy-forms==2.4
+flake8==7.3.0
 gunicorn==20.1.0
 idna==3.10
+mccabe==0.7.0
 oauthlib==3.3.1
 psycopg2==2.9.10
+pycodestyle==2.14.0
 pycparser==2.22
+pyflakes==3.4.0
 PyJWT==2.10.1
 python3-openid==3.2.0
 requests==2.32.4
